--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,11 @@ services:
     environment: 
       MYSQL_HOST: mysql
       MYSQL_USER: root 
-      MYSQL_ROOT_PASSWORD: johnahn777
+      MYSQL_ROOT_PASSWORD: sion130826!
       MYSQL_DATABASE: myapp
       MYSQL_PORT: 3306   
 
 
-
-      
   # mysql:
   #   build: ./mysql
   #   restart: unless-stopped
@@ -45,5 +43,5 @@ services:
   #     - ./mysql/mysql_data:/var/lib/mysql
   #     - ./mysql/sqls/:/docker-entrypoint-initdb.d/
   #   environment:
-  #     MYSQL_ROOT_PASSWORD: johnahn
+  #     MYSQL_ROOT_PASSWORD: sion130826!
   #     MYSQL_DATABASE: myapp
